# falsiflow

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  RESPONSIBLE_USE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  environment.yml  index.html  netlify.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data/: biological_followup_schema.json  bom_schema.json  evidence_records.jsonl  evidence_records_seed.json  evidence_schema.json  evidence_sources.json  experiment_schema.json  external1_baseline_experiment.json  external_material_candidates.json  external_scoring_profile.json  limina.duckdb  limina_claim_guard_regression.json  limina_discovery_candidates.json  limina_discovery_cycle_state.json  limina_discovery_ranking.json  limina_discovery_scoring_profile.json  limina_execution_authorization_log_regression.json  limina_execution_release_regression.json  limina_first_wave_post_dispatch_processing.json  limina_first_wave_rfq_dispatch_cockpit.json  limina_hybrid_measurement_plan.csv  limina_hybrid_measurement_plan.json  limina_iteration_state.json  limina_local_capture_pack.json  limina_local_capture_preflight.json  limina_local_capture_qc_checklist.csv  limina_local_capture_tasks.csv  limina_local_instrument_register_template.csv  limina_material_technologies.json  limina_portfolio_bypass_audit.json  limina_portfolio_claim_boundary_regression.json  limina_quote_selection_source_guard_regression.json  limina_rfq_reply_intake_regression.json  limina_rfq_reply_log_regression.json  limina_rfq_send_confirmation_intake_regression.json  limina_rfq_send_log_regression.json  limina_scoring_profile.json  limina_second_wave_candidate_queue.csv  limina_second_wave_candidate_queue.json  limina_second_wave_scope_lock_pack.json  (+229 more)
docs/: cl1_external_materials.md  falsiflow_1k_launch_plan.md  falsiflow_adapter_profiles.md  falsiflow_adoption_priorities.md  falsiflow_architecture.md  falsiflow_casebook_check.md  falsiflow_cli_reference.md  falsiflow_data_contract.md  falsiflow_demo_pr_playbook.md  falsiflow_github_action_examples.md  falsiflow_launch_execution.md  falsiflow_local_llm_eval.md  falsiflow_mcp.md  falsiflow_mvp.md  falsiflow_positioning.md  falsiflow_public_casebook.md  falsiflow_public_issue_queue.md  falsiflow_pypi_trusted_publishing.md  falsiflow_rag_quality_gate_proposal.md  falsiflow_security_posture.md  falsiflow_template_authoring.md  falsiflow_troubleshooting.md  index.html  limina_strategy.md  limina_tooling_roadmap.md  static_hosting.md
examples/: README.md  basic_nvt.json  water.xyz
falsiflow/: __init__.py  adapters.py  adoption.py  api.py  browser_demo.py  bundle.py  casebook_check.py  claim_check.py  cli.py  core.py  demo.py  discovery.py  doctor.py  local_server.py  mcp_server.py  public_release.py  quickstart.py  release.py  scaffold.py  template_check.py  template_discovery.py  template_gallery.py  template_install.py  template_pack.py  template_provenance.py  template_registry.py  template_release.py
falsiflow_ai_eval/: evidence.csv  template.json
public_demo/: README.md  demo_package_summary.json  try_report.html  workbench.html
reports/: data_validation.md  evidence_register.md  external1_baseline_experiment.md  external1_research_brief.md  external1_waste_cartridge_ranking.md  first_material_technology.md  limina_claim_guard_regression.md  limina_discovery_cycle_state.md  limina_discovery_ranking.md  limina_execution_authorization_log_regression.md  limina_execution_release_regression.md  limina_first_wave_post_dispatch_processing.md  limina_first_wave_rfq_dispatch_cockpit.html  limina_first_wave_rfq_dispatch_cockpit.md  limina_hybrid_measurement_plan.md  limina_iteration_state.md  limina_local_capture_pack.md  limina_local_capture_preflight.md  limina_portfolio_bypass_audit.md  limina_portfolio_claim_boundary_regression.md  limina_quote_selection_source_guard_regression.md  limina_rfq_reply_intake_regression.md  limina_rfq_reply_log_regression.md  limina_rfq_send_confirmation_intake_regression.md  limina_rfq_send_log_regression.md  limina_second_wave_candidate_queue.md  limina_second_wave_scope_lock_pack.md  limina_smoke_capture_preflight.md  limina_smoke_capture_tranche.md  limina_smoke_entry_apply.md  limina_smoke_entry_sheet.md  limina_smoke_execution_queue.md  limina_smoke_raw_csv_value_extraction.md  limina_smoke_rehearsal.md  limina_smoke_source_drop_plan.md  limina_smoke_source_value_import.md  limina_smoke_source_values_sheet.md  limina_smoke_starter_batch_readiness.md  limina_smoke_starter_execution_pack.md  limina_smoke_starter_raw_file_template_pack.md  (+126 more)
scripts/: apply_limina_execution_authorization_log.py  apply_limina_rfq_reply_log.py  apply_limina_rfq_send_log.py  apply_limina_smoke_entry_sheet.py  apply_nhi_pedot_h_a_bundle_entry_sheet.py  apply_nhi_pedot_h_a_rfq_send_confirmation_entry_sheet.py  apply_nhi_pedot_h_a_vendor_bundle_entry_return.py  apply_zrc_nd_phase_a_rfq_send_confirmation_entry_sheet.py  apply_zrc_nd_phase_a_vendor_bundle_entry_sheet.py  audit_limina_execution_release.py  audit_limina_portfolio_bypass_paths.py  audit_limina_smoke_starter_batch_readiness.py  audit_limina_source_file_inventory.py  audit_limina_suitability_claim.py  audit_nhi_pedot_h_a_rfq_eml_integrity.py  audit_nhi_pedot_h_a_vendor_contact_sources.py  audit_zrc_nd_readiness.py  check_nvidia_key.py  check_zrc_nd_run_completeness.py  design_nhi_pedot_variant_ladder.py  evaluate_nhi_pedot_h_a_quote_replies.py  evaluate_nhi_pedot_long_runs.py  evaluate_nhi_pedot_runs.py  evaluate_zrc_nd_bio_runs.py  evaluate_zrc_nd_phase_a_quote_replies.py  evaluate_zrc_nd_validation_runs.py  extract_limina_smoke_raw_csv_values.py  extract_limina_wide_raw_csv_values.py  extract_nhi_pedot_h_a_raw_csv_values.py  falsiflow.py  generate_nhi_pedot_fixture_data.py  generate_nhi_pedot_forward_gate_package.py  generate_nhi_pedot_h_a_raw_fixture_data.py  generate_nhi_pedot_long_fixture_data.py  generate_nhi_pedot_long_run_plan.py  generate_nhi_pedot_run_plan.py  (+114 more)
(+228 files in other folders)
